[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/pause/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.2, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 454.0
margin_top = 266.0
margin_right = 569.0
margin_bottom = 334.0

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 115.0
margin_bottom = 20.0
text = "RESUME_GAME"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_left = -36.0
margin_top = -10.0
margin_right = 35.0
margin_bottom = 10.0
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 115.0
margin_bottom = 44.0
text = "BACK_TO_MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 115.0
margin_bottom = 68.0
text = "EXIT_GAME"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackMenu" to="." method="_on_BackMenu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
